--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@ input[type="text"], input[type="email"]{height:var(--input-height);padding:8px 1
 .accepted-cards img{height:20px;width:auto;display:block;object-fit:contain;}
 footer{margin-top:18px;color:var(--subtext);font-size:13px;text-align:center;transition: color var(--transition-time) ease;}
 @media (max-width:900px){.inputs{flex-direction:column;}.input-left,.input-right{flex:1 1 100%;}.download-grid{grid-template-columns:1fr;}.roles-grid{grid-template-columns:1fr;}.controls{justify-content:space-between;}}
+/* small tweak so paypal buttons match dark card look */
+.paypal-button-container > div { border-radius:8px; overflow:hidden; }
 </style>
 
-<script src="https://www.paypal.com/sdk/js?client-id=AWomsHIdagP1tiIig6-Q5hOeENO3lhpbCO20tPsBa3CmUx77koWkm6oA1qZCklI7F7PsTa4joZruigyM&currency=USD" defer></script>
+<!-- disable paylater so Pay Later option won't appear -->
+<script src="https://www.paypal.com/sdk/js?client-id=AWomsHIdagP1tiIig6-Q5hOeENO3lhpbCO20tPsBa3CmUx77koWkm6oA1qZCklI7F7PsTa4joZruigyM&currency=USD&disable-funding=paylater" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
 </head>
 <body>
@@ -104,57 +107,67 @@ footer{margin-top:18px;color:var(--subtext);font-size:13px;text-align:center;tra
 </div>
 
 <script>
-window.addEventListener('load',()=>{try{emailjs.init("zEjStXCET2RlB2UuJ");}catch(e){console.warn(e);}});
+/* init EmailJS key (keep same or replace with yours) */
+window.addEventListener('load', ()=> {
+  try { emailjs.init("zEjStXCET2RlB2UuJ"); } catch(e) { console.warn('EmailJS init failed', e); }
+});
 
-const growInput=document.getElementById('growid');
-const emailInput=document.getElementById('buyerEmail');
-const warningEl=document.getElementById('warning');
-const emailErrorEl=document.getElementById('emailError');
-let coinBalance = parseFloat(localStorage.getItem('coinBalance')||0);
+/* Elements */
+const growInput = document.getElementById('growid');
+const emailInput = document.getElementById('buyerEmail');
+const warningEl = document.getElementById('warning');
+const emailErrorEl = document.getElementById('emailError');
+const rolesGrid = document.getElementById('rolesGrid');
 
-function isEmailValid(email){return email.includes('@');}
+let coinBalance = parseFloat(localStorage.getItem('coinBalance') || 0);
+
+/* helpers */
+function isEmailValid(email){ return email.includes('@'); }
+
 function updatePayability(){
-  const growFilled=growInput.value.trim().length>0;
-  const emailVal=emailInput.value.trim();
-  const emailNonEmpty=emailVal.length>0;
-  const emailValid=isEmailValid(emailVal);
-  const ok=growFilled && emailNonEmpty && emailValid;
+  const growFilled = growInput.value.trim().length > 0;
+  const emailVal = emailInput.value.trim();
+  const emailNonEmpty = emailVal.length > 0;
+  const emailValid = isEmailValid(emailVal);
+  const ok = growFilled && emailNonEmpty && emailValid;
   document.querySelectorAll('.paypal-wrapper').forEach(w=>{
-    w.classList.toggle('disabled',!ok);
-    w.classList.toggle('show',ok);
+    w.classList.toggle('disabled', !ok);
+    w.classList.toggle('show', ok);
   });
-  warningEl.classList.toggle('show',!(growFilled && emailNonEmpty));
-  emailErrorEl.classList.toggle('show',emailNonEmpty && !emailValid);
+  warningEl.classList.toggle('show', !(growFilled && emailNonEmpty));
+  emailErrorEl.classList.toggle('show', emailNonEmpty && !emailValid);
 }
-growInput.addEventListener('input',updatePayability);
-emailInput.addEventListener('input',updatePayability);
+growInput.addEventListener('input', updatePayability);
+emailInput.addEventListener('input', updatePayability);
 
-// ✅ Updated role list & prices
-const items=[
-  {type:'role', name:'VIP', price:'2.00'},
-  {type:'role', name:'Moderator', price:'6.76'},
-  {type:'role', name:'Admin', price:'30.78'},
-  {type:'coin', name:'1 Coin', price:'0.15'},
-  {type:'coin', name:'50 Coin', price:'4.49'}
+/* ITEMS - updated prices as requested */
+const items = [
+  { type: 'role', name: 'VIP', price: '2.00' },
+  { type: 'role', name: 'Moderator', price: '6.76' },
+  { type: 'role', name: 'Admin', price: '30.78' },
+  { type: 'coin', name: '1 Coin', price: '0.15' },
+  { type: 'coin', name: '50 Coin', price: '4.49' }
 ];
 
-const rolesGrid=document.getElementById('rolesGrid');
-
 function renderItems(){
-  rolesGrid.innerHTML='';
+  rolesGrid.innerHTML = '';
   items.forEach(item=>{
-    const wrap=document.createElement('div'); wrap.className='role';
-    const inner=document.createElement('div'); inner.className='role-inner';
-    const title=document.createElement('h3'); title.textContent=item.name;
-    const price=document.createElement('div'); price.className='price'; price.textContent=`$${item.price} — PayPal`;
+    const wrap = document.createElement('div'); wrap.className = 'role';
+    const inner = document.createElement('div'); inner.className = 'role-inner';
+    const title = document.createElement('h3'); title.textContent = item.name;
+    const price = document.createElement('div'); price.className = 'price'; price.textContent = `$${item.price} — Checkout`;
 
-    const paypalWrapper=document.createElement('div'); paypalWrapper.className='paypal-wrapper disabled';
-    paypalWrapper.id=`paypal-wrapper-${item.name.replace(/\s/g,'')}`;
-    const paypalHolder=document.createElement('div'); paypalHolder.id=`paypal-button-${item.name.replace(/\s/g,'')}`;
+    const paypalWrapper = document.createElement('div'); paypalWrapper.className = 'paypal-wrapper disabled';
+    paypalWrapper.id = `paypal-wrapper-${item.name.replace(/\s/g,'')}`;
+
+    const paypalHolder = document.createElement('div');
+    paypalHolder.id = `paypal-button-${item.name.replace(/\s/g,'')}`;
+    paypalHolder.className = 'paypal-button-container';
+
     paypalWrapper.appendChild(paypalHolder);
 
-    const accepted=document.createElement('div'); accepted.className='accepted-cards';
-    accepted.innerHTML=`<img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal"/>
+    const accepted = document.createElement('div'); accepted.className = 'accepted-cards';
+    accepted.innerHTML = `<img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal"/>
                          <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa"/>
                          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="MasterCard"/>`;
 
@@ -165,82 +178,111 @@ function renderItems(){
     wrap.appendChild(inner);
     rolesGrid.appendChild(wrap);
 
+    /* render PayPal button for this item */
     (function renderPayPal(){
       if(window.paypal && paypal.Buttons){
         paypal.Buttons({
           locale: 'id_ID',
-          style: {layout:'vertical',color:'blue',shape:'rect',label:'paypal'},
-          createOrder: (data, actions) => actions.order.create({
-            purchase_units: [{ amount: { value: item.price } }]
-          }),
-          onApprove: (data, actions) => actions.order.capture().then(details => {
-            const growidVal=growInput.value.trim();
-            const emailVal=emailInput.value.trim();
-            const paypalName=details.payer?.name?.given_name || "Unknown";
-            const paypalEmail=details.payer?.email_address || "Unknown";
-            const amount=details.purchase_units?.[0]?.amount?.value || item.price;
-
-            alert(`✅ ${item.name} purchased by ${paypalName}`);
-
-            if(item.type==='coin'){
-              coinBalance += (item.name==='1 Coin'?1:50);
-              localStorage.setItem('coinBalance', coinBalance);
-              alert(`💰 Coin balance updated: ${coinBalance} Coins`);
-            }
-
-            const logs=JSON.parse(localStorage.getItem('transactionLogs')||'[]');
-            logs.push({
-              type:item.type,
-              name:item.name,
-              growid:growidVal,
-              email:emailVal,
-              paypal_name:paypalName,
-              paypal_email:paypalEmail,
-              amount:amount,
-              date:new Date().toISOString()
+          style: {
+            layout: 'vertical',
+            color: 'blue',
+            shape: 'rect',
+            label: 'checkout' // show "Checkout" wording
+          },
+          /* create order with the item price */
+          createOrder: (data, actions) => {
+            return actions.order.create({
+              purchase_units: [{
+                amount: { value: item.price },
+                description: item.type === 'role' ? `Buy role: ${item.name}` : `Buy coins: ${item.name}`
+              }]
             });
-            localStorage.setItem('transactionLogs',JSON.stringify(logs));
+          },
+          onApprove: (data, actions) => {
+            return actions.order.capture().then(details => {
+              const growidVal = growInput.value.trim();
+              const emailVal = emailInput.value.trim();
+              const paypalName = details.payer?.name?.given_name || (details.payer?.name?.full_name ?? "Unknown");
+              const paypalEmail = details.payer?.email_address || "Unknown";
+              const amount = details.purchase_units?.[0]?.amount?.value || item.price;
 
-            if(window.emailjs){
-              emailjs.send("service_6ba3mun","template_06qc85l",{
-                to_email:"growfaxz@gmail.com",
-                growid:growidVal,
-                buyer_email:emailVal,
-                paypal_name:paypalName,
-                paypal_email:paypalEmail,
-                amount:amount,
-                role:item.name,
-                coins:item.type==='coin'?(item.name==='1 Coin'?1:50):0,
-                date:new Date().toISOString()
-              });
+              // feedback
+              alert(`✅ ${item.name} purchased by ${paypalName}`);
 
-              if(emailVal && isEmailValid(emailVal)){
-                emailjs.send("service_6ba3mun","template_f59miz8",{
-                  to_email:emailVal,
-                  growid:growidVal,
-                  paypal_name:paypalName,
-                  amount:amount,
-                  role:item.name,
-                  coins:item.type==='coin'?(item.name==='1 Coin'?1:50):0,
-                  message:`Thank you for your purchase of ${item.name}.`
-                });
+              // update local coin balance for coin items
+              if(item.type === 'coin'){
+                const add = item.name === '1 Coin' ? 1 : 50;
+                coinBalance += add;
+                localStorage.setItem('coinBalance', coinBalance);
+                alert(`💰 Coin balance updated: ${coinBalance} Coins`);
               }
-            }
-          }),
-          onError: err => console.error('PayPal error', err)
+
+              // log transaction locally
+              const logs = JSON.parse(localStorage.getItem('transactionLogs') || '[]');
+              logs.push({
+                type: item.type,
+                name: item.name,
+                growid: growidVal,
+                email: emailVal,
+                paypal_name: paypalName,
+                paypal_email: paypalEmail,
+                amount: amount,
+                date: new Date().toISOString()
+              });
+              localStorage.setItem('transactionLogs', JSON.stringify(logs));
+
+              // notify admin & buyer via EmailJS if available
+              if(window.emailjs){
+                // Admin notification
+                emailjs.send("service_6ba3mun","template_06qc85l",{
+                  to_email: "growfaxz@gmail.com",
+                  growid: growidVal,
+                  buyer_email: emailVal,
+                  paypal_name: paypalName,
+                  paypal_email: paypalEmail,
+                  amount: amount,
+                  role: item.name,
+                  coins: item.type === 'coin' ? (item.name === '1 Coin' ? 1 : 50) : 0,
+                  date: new Date().toISOString()
+                }).catch(e=>console.warn('EmailJS admin send failed', e));
+
+                // Buyer confirmation
+                if(emailVal && isEmailValid(emailVal)){
+                  emailjs.send("service_6ba3mun","template_f59miz8",{
+                    to_email: emailVal,
+                    growid: growidVal,
+                    paypal_name: paypalName,
+                    amount: amount,
+                    role: item.name,
+                    coins: item.type === 'coin' ? (item.name === '1 Coin' ? 1 : 50) : 0,
+                    message: `Thank you for your purchase of ${item.name}.`
+                  }).catch(e=>console.warn('EmailJS buyer send failed', e));
+                }
+              }
+
+              // TODO: here you can call your server endpoint to automatically assign role/coins in DB/Game
+              // fetch('/api/assign', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({growid:growidVal, role:item.name, amount, email:emailVal})})
+            });
+          },
+          onError: err => {
+            console.error('PayPal error', err);
+            alert('Payment error — check console.');
+          }
         }).render(`#paypal-button-${item.name.replace(/\s/g,'')}`);
-      } else { setTimeout(renderPayPal,200); }
+      } else {
+        setTimeout(renderPayPal, 200);
+      }
     })();
   });
 }
-renderItems();
 
-const configData={
-  powertunnel:`91.134.85.13 growtopia1.com
+/* copy config data (powertunnel/surge) */
+const configData = {
+  powertunnel: `91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com`,
-  surge:`[General]
+  surge: `[General]
 bypass-system = true
 [Rule]
 FINAL,DIRECT
@@ -250,33 +292,39 @@ growtopia2.com = 91.134.85.13
 www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13`
 };
-function copyText(key,btn){
+
+function copyText(key, btn){
   navigator.clipboard.writeText(configData[key]).then(()=>{
-    const old=btn.textContent; 
-    btn.textContent="✅ Copied!"; 
-    setTimeout(()=>btn.textContent=old,1300);
-  }).catch(()=>alert('Copy failed.'));
+    const old = btn.textContent;
+    btn.textContent = "✅ Copied!";
+    setTimeout(()=> btn.textContent = old, 1300);
+  }).catch(()=> alert('Copy failed.'));
 }
 
+/* clock (Sydney) */
 function updateClock(){
-  const now=new Date();
-  const sydney=new Date(now.toLocaleString('en-US',{timeZone:'Australia/Sydney'}));
-  document.getElementById('clock').textContent='Sydney Time: '+sydney.toLocaleTimeString('en-GB');
+  const now = new Date();
+  const sydney = new Date(now.toLocaleString('en-US', { timeZone: 'Australia/Sydney' }));
+  document.getElementById('clock').textContent = 'Sydney Time: ' + sydney.toLocaleTimeString('en-GB');
 }
-updateClock(); setInterval(updateClock,1000);
+updateClock(); setInterval(updateClock, 1000);
 
-function toggleTheme(){document.body.classList.toggle('light');}
-let lang='en';
+/* theme + lang toggles */
+function toggleTheme(){ document.body.classList.toggle('light'); }
+let lang = 'en';
 function toggleLang(){
-  lang=(lang==='en')?'id':'en';
-  const en=lang==='en';
-  document.querySelector('.btn-small[onclick="toggleLang()"]').textContent=en?'🌍 Indonesia':'🌍 English';
-  document.getElementById('title').textContent=en?'Growfax — Download Files':'Growfax — Unduh File';
-  document.getElementById('desc').textContent=en?'Choose the file you want to copy or download.':'Pilih file yang ingin disalin atau diunduh.';
-  document.getElementById('roleshop').textContent=en?'Role & Coin Shop':'Toko Role & Coin';
-  warningEl.textContent=en?'⚠️ Please fill in your GrowID and Email to enable payment.':'⚠️ Isi GrowID dan Email terlebih dahulu untuk mengaktifkan pembayaran.';
-  emailErrorEl.textContent=en?'⚠️ Invalid email address — must include "@".':'⚠️ Email tidak valid — harus mengandung "@".';
+  lang = (lang === 'en') ? 'id' : 'en';
+  const en = lang === 'en';
+  document.querySelector('.btn-small[onclick="toggleLang()"]').textContent = en ? '🌍 Indonesia' : '🌍 English';
+  document.getElementById('title').textContent = en ? 'Growfax — Download Files' : 'Growfax — Unduh File';
+  document.getElementById('desc').textContent = en ? 'Choose the file you want to copy or download.' : 'Pilih file yang ingin disalin atau diunduh.';
+  document.getElementById('roleshop').textContent = en ? 'Role & Coin Shop' : 'Toko Role & Coin';
+  warningEl.textContent = en ? '⚠️ Please fill in your GrowID and Email to enable payment.' : '⚠️ Isi GrowID dan Email terlebih dahulu untuk mengaktifkan pembayaran.';
+  emailErrorEl.textContent = en ? '⚠️ Invalid email address — must include "@".' : '⚠️ Email tidak valid — harus mengandung "@".';
 }
+
+/* initial render */
+renderItems();
 updatePayability();
 </script>
 </body>
