--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Growfax — Downloads & Shop</title>
+
+<!-- ✅ Tambahkan favicon untuk muncul di tab & sebelah link -->
+<link rel="icon" type="image/png" href="gg.png" />
+
 <style>
 :root{
   --bg:#0f1720; --text:#e6eef8; --subtext:#9fb3d8;
